@@ -5,7 +5,7 @@ Maintainer: Chris Lawrence <lawrencc@debian.org>
 Uploaders: Sandro Tosi <matrixhasu@gmail.com>, Y Giridhar Appaji Nag <giridhar@appaji.net>
 Standards-Version: 3.7.3
 Build-Depends: debhelper (>= 5.0.37.2), po4a (>= 0.23)
-Build-Depends-Indep: python-dev, python-central (>= 0.5),
+Build-Depends-Indep: python-dev, python-central (>= 0.5.14),
     python-nose,
     inotify-tools
 XS-Python-Version: current, >= 2.4
